--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@ html,body,h2,h3,h4,h5,h6 {font-family: "Roboto", sans-serif}
     <nav id="homenav">
       <a href="index.html" class="w3-button w3-bar-item">Home</a>
       <a href="resumeWebpage.html" class="w3-button w3-bar-item">Resume</a>
-      <a href="photoPortfolio.html" class="w3-button w3-bar-item">Portfolio </a>
+      <a href="photoPortfolio.html" class="w3-button w3-bar-item">Photo Journal </a>
     </nav>
     <div id="bannertext">
       <h1 style="font-size: 50px">Hello, I am Kyle Jernigan</h1>
@@ -49,7 +49,7 @@ This website offers a glimpse into who I am and displays some of the skills I ha
     <p>Resume &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
         &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
         &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-        Portfolio</p>
+        Photo Journal</p>
     <p>
     <a href="resumeWebpage.html"><i class="fa fa-address-card-o w3-hover-opacity" style="font-size:70px;"></i></a>
     &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
