--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@ This website offers a glimpse into who I am and displays some of the skills I ha
 <div class="w3-container w3-center w3-margin-top">
     <p>Resume &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
         &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-        &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+        &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
         Photo Journal</p>
     <p>
     <a href="resumeWebpage.html"><i class="fa fa-address-card-o w3-hover-opacity" style="font-size:70px;"></i></a>
