--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@ This website offers a glimpse into who I am and displays some of the skills I ha
     <a href="resumeWebpage.html"><i class="fa fa-address-card-o w3-hover-opacity" style="font-size:70px;"></i></a>
     &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
     &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-    &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+    &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
     <a href="photoPortfolio.html"><i class="fa fa-camera-retro w3-hover-opacity" style="font-size:70px;"></i></a>
     </p>
 </div>
