--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html>
-<title>Kyle's Resume</title>
+<title>Homepage</title>
 <head>
 <meta charset="UTF-8">
 <meta name="description" content="portfolio website">
