--- a/photoPortfolio.html
+++ b/photoPortfolio.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html>
-<title>Kyle's Resume</title>
+<title>Photo Journal</title>
 <head>
 <meta charset="UTF-8">
 <meta name="description" content="portfolio website">
@@ -26,7 +26,7 @@ html,body,h1,h2,h3,h4,h5,h6 {font-family: "Roboto", sans-serif}
     <nav id="homenav">
       <a href="index.html" class="w3-button w3-bar-item">Home</a>
       <a href="resumeWebpage.html" class="w3-button w3-bar-item">Resume</a>
-      <a href="photoPortfolio.html" class="w3-button w3-bar-item">Photo Journal </a>
+      <a href="photoPortfolio.html" class="w3-button w3-bar-item">Photo Journal</a>
     </nav>
   </div>
   </header>
