--- a/photoPortfolio.html
+++ b/photoPortfolio.html
@@ -78,7 +78,7 @@ html,body,h1,h2,h3,h4,h5,h6 {font-family: "Roboto", sans-serif}
   &nbsp;
   <a href="https://twitter.com/kyleisliving" target=_blank><i class="fa fa-twitter w3-hover-opacity" style="font-size:30px;"></i></a>
   &nbsp;
-  <a href="https://www.linkedin.com/in/kyle-jernigan-b26530195/"><i class="fa fa-linkedin w3-hover-opacity" style="font-size:30px;"></i></a>
+  <a href="https://www.linkedin.com/in/kyle-jernigan-b26530195/" target=_blank><i class="fa fa-linkedin w3-hover-opacity" style="font-size:30px;"></i></a>
   &nbsp;
   <br>
   </div>
