--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@ This website offers a glimpse into who I am and displays some of the skills I ha
     &nbsp;
     <a href="https://twitter.com/kyleisliving" target=_blank><i class="fa fa-twitter w3-hover-opacity" style="font-size:30px;"></i></a>
     &nbsp;
-    <a href="https://www.linkedin.com/in/kyle-jernigan-b26530195/"><i class="fa fa-linkedin w3-hover-opacity" style="font-size:30px;"></i></a>
+    <a href="https://www.linkedin.com/in/kyle-jernigan-b26530195/" target=_blank><i class="fa fa-linkedin w3-hover-opacity" style="font-size:30px;"></i></a>
     &nbsp;
     <br>
     </div>
