--- a/resumeWebpage.html
+++ b/resumeWebpage.html
@@ -110,7 +110,7 @@ html,body,h1,h2,h3,h4,h5,h6 {font-family: "Roboto", sans-serif}
         <div class="w3-container">
           <h5 class="w3-opacity"><b>Liberty University</b></h5>
           <h6 class="w3-text-teal"><i class="fa fa-calendar fa-fw w3-margin-right"></i>2018 - 2020</h6>
-          <p>Bachelor of Science - BS, Information Technology
+          <p>Bachelor of Science - BS, Information Technology: Web & Mobile Programming
             <ul>
             <li>GPA: 3.87</li>
             <li>Awards: Dean's List, Summa Cum Laude</li></ul>
