--- a/resumeWebpage.html
+++ b/resumeWebpage.html
@@ -98,7 +98,7 @@ html,body,h1,h2,h3,h4,h5,h6 {font-family: "Roboto", sans-serif}
           <hr>
         </div>
         <div class="w3-container">
-          <h5 class="w3-opacity"><b>Bagger / Lowes Food</b></h5>
+          <h5 class="w3-opacity"><b>Courtesy Clerk & Bagger / Lowes Food</b></h5>
           <h6 class="w3-text-teal"><i class="fa fa-calendar fa-fw w3-margin-right"></i>Nov 2016 - Jul 2017</h6>
           <p>Provided excellent customer service and assisted in training new employees while creating and maintaining a professional atmosphere.</p>
           <hr>
