--- a/resumeWebpage.html
+++ b/resumeWebpage.html
@@ -100,7 +100,13 @@ html,body,h1,h2,h3,h4,h5,h6 {font-family: "Roboto", sans-serif}
         <div class="w3-container">
           <h5 class="w3-opacity"><b>Courtesy Clerk & Bagger / Lowes Food</b></h5>
           <h6 class="w3-text-teal"><i class="fa fa-calendar fa-fw w3-margin-right"></i>Nov 2016 - Jul 2017</h6>
-          <p>Provided excellent customer service and assisted in training new employees while creating and maintaining a professional atmosphere.</p>
+          <p>
+            <ul>
+              <li>Provided excellent customer service</li>
+              <li>Assisted in training new employees</li>
+              <li>creating and maintaining a professional atmosphere</li>
+            </ul>
+          </p>
           <hr>
         </div>
       </div>
