--- a/resumeWebpage.html
+++ b/resumeWebpage.html
@@ -102,7 +102,7 @@ html,body,h1,h2,h3,h4,h5,h6 {font-family: "Roboto", sans-serif}
           <h6 class="w3-text-teal"><i class="fa fa-calendar fa-fw w3-margin-right"></i>Nov 2016 - Jul 2017</h6>
           <p>
             <ul>
-              <li>Provided excellent customer service</li>
+              <li>Provided excellent customer service in a fast-paced atmosphere</li>
               <li>Assisted in training new employees</li>
               <li>creating and maintaining a professional atmosphere</li>
             </ul>
