--- a/resumeWebpage.html
+++ b/resumeWebpage.html
@@ -104,7 +104,7 @@ html,body,h1,h2,h3,h4,h5,h6 {font-family: "Roboto", sans-serif}
             <ul>
               <li>Provided excellent customer service in a fast-paced atmosphere</li>
               <li>Assisted in training new employees</li>
-              <li>creating and maintaining a professional atmosphere</li>
+              <li>created and maintained a professional atmosphere</li>
             </ul>
           </p>
           <hr>
