--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@ html,body,h2,h3,h4,h5,h6 {font-family: "Roboto", sans-serif}
       <a href="photoPortfolio.html" class="w3-button w3-bar-item">Photo Journal </a>
     </nav>
     <div id="bannertext">
-      <h1 style="font-size: 50px">Hello, I am Kyle Jernigan</h1>
+      <h1 style="font-size: 50px">Kyle Jernigan | Web and Mobile Programmer, Photographer, Muscian.</h1>
     </div>
   </div>
   </header>
