--- a/resumeWebpage.html
+++ b/resumeWebpage.html
@@ -94,7 +94,11 @@ html,body,h1,h2,h3,h4,h5,h6 {font-family: "Roboto", sans-serif}
         <div class="w3-container">
           <h5 class="w3-opacity"><b>Historic Preservation Apprentice / Anthony Small</b></h5>
           <h6 class="w3-text-teal"><i class="fa fa-calendar fa-fw w3-margin-right"></i>Dec 2019 - <span class="w3-tag w3-teal w3-round">Current</span></h6>
-          <p>Maintained and repaired old objects and houses, both of which required focusing on the small details in order to accomplish the task.</p>
+          <p>
+            <ul>
+              <li>Maintain and repaire old objects and houses, both of which required focusing on the small details in order to accomplish the task.</li>
+            </ul>
+            </p>
           <hr>
         </div>
         <div class="w3-container">
