--- a/resumeWebpage.html
+++ b/resumeWebpage.html
@@ -97,6 +97,7 @@ html,body,h1,h2,h3,h4,h5,h6 {font-family: "Roboto", sans-serif}
           <p>
             <ul>
               <li>Maintain and repaire old objects and houses, both of which required focusing on the small details in order to accomplish the task.</li>
+              <li>Worked on a team with interior decorators to make sure everything meets the client's expectations.</li>
             </ul>
             </p>
           <hr>
