--- a/resumeWebpage.html
+++ b/resumeWebpage.html
@@ -96,8 +96,8 @@ html,body,h1,h2,h3,h4,h5,h6 {font-family: "Roboto", sans-serif}
           <h6 class="w3-text-teal"><i class="fa fa-calendar fa-fw w3-margin-right"></i>Dec 2019 - <span class="w3-tag w3-teal w3-round">Current</span></h6>
           <p>
             <ul>
-              <li>Maintain and repaire old objects and houses, both of which required focusing on the small details in order to accomplish the task.</li>
-              <li>Worked on a team with interior decorators to make sure everything meets the client's expectations.</li>
+              <li>Maintain and repair old objects and houses, both of which required focusing on the small details in order to accomplish the task.</li>
+              <li>Work with a team of interior decorators to make sure everything meets the client's expectations.</li>
             </ul>
             </p>
           <hr>
