--- a/index.html
+++ b/index.html
@@ -18,18 +18,20 @@ html,body,h2,h3,h4,h5,h6 {font-family: "Roboto", sans-serif}
 <!-- Body of page -->
 <body class="w3-light-grey">
 
+
 <!-- Nav Bar & Photo Banner -->
-<header>
-  <div id="bannerimage">
-    <nav id="homenav">
+  <header>
+    <div id="bannerimage">
+      <nav id="homenav">
       <a href="index.html" class="w3-button w3-bar-item">Home</a>
       <a href="resumeWebpage.html" class="w3-button w3-bar-item">Resume</a>
       <a href="photoPortfolio.html" class="w3-button w3-bar-item">Photo Journal </a>
-    </nav>
-    <div id="bannertext">
-      <h1 style="font-size: 50px">Hello, I'm Kyle Jernigan.</h1>
+      <a href="playlists.html" class="w3-button w3-bar-item">Playlists</a>
+      </nav>
+      <div id="bannertext">
+        <h1 style="font-size: 50px"><i>Hello, I'm Kyle Jernigan.</i></h1>
+      </div>
     </div>
-  </div>
   </header>
 
 <!-- Main Content-->
@@ -46,16 +48,15 @@ This website offers a glimpse into who I am and displays some of the skills I ha
 </section>
 
 <div class="w3-container w3-center w3-margin-top">
-    <p> &nbsp; &nbsp;Resume &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-        &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-        &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-        Photo Journal</p>
+    <p>Resume&emsp;&emsp;&emsp;&emsp;&emsp;&emsp; Photo Journal &emsp;&emsp;&emsp;&emsp;&emsp;&emsp; Playlists
+    </p>
+
     <p>
     <a href="resumeWebpage.html"><i class="fa fa-address-card-o w3-hover-opacity" style="font-size:70px;"></i></a>
-    &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-    &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-    &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+    &emsp;&emsp;&emsp;&emsp;&emsp;
     <a href="photoPortfolio.html"><i class="fa fa-camera-retro w3-hover-opacity" style="font-size:70px;"></i></a>
+    &emsp;&emsp;&emsp;&emsp;&emsp;
+    <a href="playlists.html"><i class="fa fa-music w3-hover-opacity" style="font-size:70px;"></i></a>
     </p>
 </div>
 
