--- a/resumeWebpage.html
+++ b/resumeWebpage.html
@@ -23,12 +23,16 @@ html,body,h1,h2,h3,h4,h5,h6 {font-family: "Roboto", sans-serif}
 
 <!-- Nav Bar -->
 <header>
-  <div id="navimage">
+  <div id="bannerimage">
     <nav id="homenav">
       <a href="index.html" class="w3-button w3-bar-item">Home</a>
       <a href="resumeWebpage.html" class="w3-button w3-bar-item">Resume</a>
       <a href="photoPortfolio.html" class="w3-button w3-bar-item">Photo Journal </a>
+      <a href="playlists.html" class="w3-button w3-bar-item">Playlists</a>
     </nav>
+    <div id="bannertext">
+      <h1 style="font-size: 50px"><i>About Me</i></h1>
+    </div>
   </div>
   </header>
 
@@ -53,7 +57,7 @@ html,body,h1,h2,h3,h4,h5,h6 {font-family: "Roboto", sans-serif}
           <p><i class="fa fa-home fa-fw w3-margin-right w3-large w3-text-teal"></i>Wilmington, NC</p>
           <p><i class="fa fa-envelope fa-fw w3-margin-right w3-large w3-text-teal"></i>kjman1097@gmail.com</p>
           <hr>
-
+          <!--New Updated skills/hobby list -->
           <p class="w3-large"><b><i class="fa fa-asterisk fa-fw w3-margin-right w3-text-teal"></i>Skills</b></p>
           <p>HTML/CSS</p>
           <div class="w3-light-grey w3-round-xlarge w3-small">
@@ -76,6 +80,7 @@ html,body,h1,h2,h3,h4,h5,h6 {font-family: "Roboto", sans-serif}
           <p>Object-Oriented Programming</p>
           <div class="w3-light-grey w3-round-xlarge w3-small">
           </div>
+
           
           <p class="w3-large w3-text-theme"><b><i class="fa fa-gamepad fa-fw w3-margin-right w3-text-teal"></i>Hobbies</b></p>
           <p>Guitar</p>
@@ -148,8 +153,8 @@ html,body,h1,h2,h3,h4,h5,h6 {font-family: "Roboto", sans-serif}
           </p>
           <hr>
         </div>
-      </div><br>
-
+        </div><br>
+<!--New Volunteer Section-->
       <div class="w3-container w3-card w3-white">
         <h2 class="w3-text-grey w3-padding-16"><i class="fa fa-handshake-o fa-fw w3-margin-right w3-xxlarge w3-text-teal"></i>Volunteer Experience</h2>
         <div class="w3-container">
@@ -167,7 +172,6 @@ html,body,h1,h2,h3,h4,h5,h6 {font-family: "Roboto", sans-serif}
           <hr>
         </div>
         </div><br>
-
     <!-- End Right Column -->
     </div>
     
