--- a/resume.html
+++ b/resume.html
@@ -168,12 +168,11 @@
                             <br>
                             <br>
                             <div class="container">
-                                <h5 class="text-muted">Faith Christians School</h5>
+                                <h5 class="text-muted">Faith Christian School</h5>
                                 <h6 class="text-muted"><i class="bi bi-calendar3 margin-right"></i>2013 - 2016</h6>
                                 <p>High School Diploma
                                     <ul>
                                       <li>GPA: 3.6</li>
-                                      <li>Awards: Dean's List, Summa Cum Laude</li>
                                     </ul>
                                     </p>
         
