--- a/PhotoJournal.html
+++ b/PhotoJournal.html
@@ -4,6 +4,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
         <meta name="Kyle Jernigan" content="" />
         <title>Kyle Jernigan - Portfolio Webpage</title>
+        <link rel="icon" href="Style/img/favicon.png">
         <!--Core CSS-->
         <link href="Style/style.css" rel="stylesheet"/>
         <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
