--- a/resume.html
+++ b/resume.html
@@ -103,6 +103,9 @@
                     <p>Microsoft Office</p>
                     <p>Visual Studio Code</p>
                     <p>Github</p>
+                    <p>Figma</p>
+                    <p>Wordpress</p>
+                    <p>Woo Commerce</p>  
                     <br>
                     <div class="text-left text-large text-dark h4"><b><i class="bi bi-controller text-center text-dark"></i> Hobbies</b></div>
                     <hr>
@@ -117,10 +120,28 @@
                 <div class="col-sm-8 align-right shadow p-3 mb-5 gx-1 bg-white rounded">
                     <div class="text-left text-large text-dark h3"><b><i class="bi bi-briefcase-fill text-center text-dark"></i> Work Experience</b></div>
                     <hr>
+                     <!--work info go here-->
+                    <div class="container">
+                        <h5 class="text-muted">UI/UX Designer / <a href="https://www.summaware.com">Summaware</a></h5>
+                        <h6 class="text-muted"><i class="bi bi-calendar3 margin-right"></i>   Oct 2021 - <span class="text-muted">Current</span></h6>
+                        <p>
+                            <ul>
+                              <li>Gathering user requirements with product managers and other collaborators</li><br>
+                              <li>Illustrating design ideas by creating workflows, sitemaps, and developing highly detailed UI mockups and prototypes within Figma</li><br>
+                              <li>Coordinate with engineers to ensure a multifaceted system is connected stylistically and functionally</li><br>
+                              <li>Coordinate with my team of engineers to ensure a multifaceted system is connected stylistically and functionally</li>
+                              <li>Lead presentations of rough drafts and detailed designs to internal teams and key stakeholders</li><br>
+                              <li>Conduct layout adjustments based on user feedback</li><br>  
+                            </ul>
+                            </p>
+
+                    </div>
+                    <br>
+                    <br>
                     <!--work info go here-->
                     <div class="container">
                         <h5 class="text-muted">Historic Preservation Apprentice / Anthony Small</h5>
-                        <h6 class="text-muted"><i class="bi bi-calendar3 margin-right"></i>   Dec 2019 - <span class="text-muted">Current</span></h6>
+                        <h6 class="text-muted"><i class="bi bi-calendar3 margin-right"></i>   Dec 2019 - Oct 2021</h6>
                         <p>
                             <ul>
                               <li>Utilize specialized tools and methods to repair and preserve vintage objects and historic houses to
@@ -167,16 +188,6 @@
         
                             </div>
                             <br>
-                            <br>
-                            <div class="container">
-                                <h5 class="text-muted">Faith Christian School</h5>
-                                <h6 class="text-muted"><i class="bi bi-calendar3 margin-right"></i>   2013 - 2016</h6>
-                                <p>High School Diploma
-                                    <ul>
-                                      <li>GPA: 3.6</li>
-                                    </ul>
-                                    </p>
-        
                             </div>
                             <br>
                             <br>
