--- a/resume.html
+++ b/resume.html
@@ -129,7 +129,7 @@
                               <li>Gathering user requirements with product managers and other collaborators</li><br>
                               <li>Illustrating design ideas by creating workflows, sitemaps, and developing highly detailed UI mockups and prototypes within Figma</li><br>
                               <li>Coordinate with engineers to ensure a multifaceted system is connected stylistically and functionally</li><br>
-                              <li>Coordinate with my team of engineers to ensure a multifaceted system is connected stylistically and functionally</li><br>
+                              <li>Create detailed technical documentation and how-to guides for on-boarding new customers of our system</li><br>
                               <li>Lead presentations of rough drafts and detailed designs to internal teams and key stakeholders</li><br>
                               <li>Conduct layout adjustments based on user feedback</li><br>  
                             </ul>
