--- a/index.html
+++ b/index.html
@@ -81,9 +81,9 @@
                 <hr>
                 <img src="Style/img/doubleme.jpg" class="img-fluid" alt="Responsive image">
                 <hr>
-                <p>I graduated with a Bachelor's degree in Information Technology with a focus in Web & Mobile Programming. My interests include programming, graphic design, photography, and playing guitar. I enjoy learning about new techniques or perspectives in my field of interests. When I am learning about a new topic, I try to learn as much as I can about it.</p>
-                <p>I am interested in jobs that involve programming, graphic design, and applying a creative perspective to the job at hand. My work ethic is focusing on a difficult task until it is completed, and learning as much as I can throughout the process. I connect with others with ease and excel in team based projects. In college, I worked as an apprentice in the field of historic preservation, gaining valuable experience of working in situations where focusing on the small details were of the upmost importance.</p>
-                <p>Projects I have completed in various programming languages include creating numerous websites with JavaScript, HTML and CSS, creating multi-page databases utilizing MySQL and creating scripts to manipulate and modify multiple files with Python. I greatly enjoy applying a creative mindset to all sorts of programming problems I encounter.</p>
+                <p>I graduated with a Bachelor's degree in Information Technology with a focus in Web & Mobile Programming. My interests include programming, graphic design, photography, and electronic repair. I enjoy learning about new techniques or perspectives in my field of interests. When I am learning about a new topic, I try to learn as much as I can about it.</p>
+                <p>I have a passion for streamlining workflows & problem solving user interaction while presenting them in an elegant and beautiful lens. I love being the bridge that brings functionality and style together!</p>
+                <p>Projects I have worked on have utilized tools and software such as Wordpress, Woo Commerce, Figma, Scribus, ScribeHow, and much more!</p>
                 <p>This website offers a glimpse into who I am and displays some of the skills I have!</p>
                 <p>Thanks for checking it out!</p>
               </div>
