--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
               <div class="col-md-12 text-center">
                 <h1 class="bold text-center"><strong>About me</strong></h1>
                 <hr>
-                <img src="Style/img/doubleme.jpg" class="img-fluid" alt="Responsive image">
+                <img src="Style/img/doubleme.jpg" class="img-fluid" alt="Responsive image" style="border-radius: 4px;">
                 <hr>
                 <p>I graduated with a Bachelor's degree in Information Technology with a focus in Web & Mobile Programming. My interests include programming, graphic design, photography, and electronic repair. I enjoy learning about new techniques or perspectives in my field of interests. When I am learning about a new topic, I try to learn as much as I can about it.</p>
                 <p>I have a passion for streamlining workflows & problem solving user interaction while presenting them in an elegant and beautiful lens. I love being the bridge that brings functionality and style together!</p>
