--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
                     <br>
                     <h1 class="h1-reponsive text-white text-uppercase font-weight-bold mb-0 pt-md-5 pt-5 wow fadeInDown" data-wow-delay="0.3s"><strong>Kyle Jernigan</strong></h1>
                     <hr class="hr-light my-4 wow fadeInDown" data-wow-delay="0.4s">
-                    <h5 class="text-uppercase mb-4 text-white wow fadeInDown" data-wow-delay="0.4s"><strong>Web Designer | Photographer | Muscian</strong></h5>
+                    <h5 class="text-uppercase mb-4 text-white wow fadeInDown" data-wow-delay="0.4s"><strong>UI/UX Designer | Photographer | Creator</strong></h5>
                   </div>
                   <!--Grid column-->
                 </div>
