--- a/PhotoJournal.html
+++ b/PhotoJournal.html
@@ -38,6 +38,9 @@
                     <li class="nav-item active">
                       <a class="nav-link" href="PhotoJournal.html">Photo Journal<span class="sr-only">(current)</span></a>
                     </li>
+                    <li class="nav-item">
+                      <a class="nav-link" href="portfolio.html">Portfolio</a>
+                    </li>
                   </ul>
                 </div>
               </div>
@@ -305,9 +308,6 @@ Replace '0' with corresponding slide number.
           <h6>Get in touch through social media!</h6>
           <!-- Section: Social media -->
           <section class="mb-4">
-            <!-- Twitter -->
-            <a class="btn btn-outline-light btn-floating m-1" href="https://twitter.com/kyleisliving" target="_blank" role="button"><i class="bi bi-twitter"></i></a>
-  
             <!-- Instagram -->
             <a class="btn btn-outline-light btn-floating m-1" href="https://www.instagram.com/kyleisliving" target="_blank" role="button"><i class="bi bi-instagram"></i></a>
   
