--- a/index.html
+++ b/index.html
@@ -37,13 +37,16 @@
                   <li class="nav-item">
                     <a class="nav-link" href="PhotoJournal.html">Photo Journal</a>
                   </li>
+                  <li class="nav-item">
+                    <a class="nav-link" href="portfolio.html">Portfolio</a>
+                  </li>
                 </ul>
               </div>
             </div>
           </nav>
           <!-- Navbar -->
           <!-- Full Page Intro -->
-          <div class="view" style="background-image: url('Style/img/background.jpg'); background-repeat: no-repeat; background-size: cover; background-position: center center;">
+          <div class="view" style="background-image: url('Style/img/background.jpg'); background-repeat: no-repeat; background-size:cover; background-position: center center;">
             <!-- Mask & flexbox options-->
             <div class="mask rgba-black-light align-items-center">
               <!-- Content -->
@@ -79,7 +82,7 @@
               <div class="col-md-12 text-center">
                 <h1 class="bold text-center"><strong>About me</strong></h1>
                 <hr>
-                <img src="Style/img/doubleme.jpg" class="img-fluid" alt="Responsive image" style="border-radius: 4px;">
+                <img src="Style/img/doubleme.jpg" class="img-fluid" alt="Responsive image" style="border-radius: 4px;" >
                 <hr>
                 <p>I graduated with a Bachelor's degree in Information Technology with a focus in Web & Mobile Programming. My interests include programming, graphic design, photography, and electronic repair. I enjoy learning about new techniques or perspectives in my field of interests. When I am learning about a new topic, I try to learn as much as I can about it.</p>
                 <p>I have a passion for streamlining workflows & problem solving user interaction while presenting them in an elegant and beautiful lens. I love being the bridge that brings functionality and style together. Projects I have worked on have utilized tools and software such as Wordpress, Woo Commerce, Figma, Scribus, ScribeHow, and much more!</p>
@@ -100,9 +103,6 @@
         <h6>Get in touch through social media!</h6>
         <!-- Section: Social media -->
         <section class="mb-4">
-          <!-- Twitter -->
-          <a class="btn btn-outline-light btn-floating m-1" href="https://twitter.com/kyleisliving" target="_blank" role="button"><i class="bi bi-twitter"></i></a>
-
           <!-- Instagram -->
           <a class="btn btn-outline-light btn-floating m-1" href="https://www.instagram.com/kyleisliving" target="_blank" role="button"><i class="bi bi-instagram"></i></a>
 
