--- a/resume.html
+++ b/resume.html
@@ -37,6 +37,9 @@
                   <li class="nav-item">
                     <a class="nav-link" href="PhotoJournal.html">Photo Journal</a>
                   </li>
+                  <li class="nav-item">
+                    <a class="nav-link" href="portfolio.html">Portfolio</a>
+                  </li>
                 </ul>
               </div>
             </div>
@@ -122,7 +125,7 @@
                     <hr>
                      <!--work info go here-->
                     <div class="container">
-                        <h5 class="text-muted">UI/UX Designer / <a href="https://www.summaware.com">Summaware</a></h5>
+                        <h5 class="text-muted">Lead UI/UX Designer / <a href="https://www.summaware.com">Summaware</a></h5>
                         <h6 class="text-muted"><i class="bi bi-calendar3 margin-right"></i>   Oct 2021 - <span class="text-muted">Current</span></h6>
                         <p>
                             <ul>
@@ -223,9 +226,6 @@
           <h6>Get in touch through social media!</h6>
           <!-- Section: Social media -->
           <section class="mb-4">
-            <!-- Twitter -->
-            <a class="btn btn-outline-light btn-floating m-1" href="https://twitter.com/kyleisliving" target="_blank" role="button"><i class="bi bi-twitter"></i></a>
-  
             <!-- Instagram -->
             <a class="btn btn-outline-light btn-floating m-1" href="https://www.instagram.com/kyleisliving" target="_blank" role="button"><i class="bi bi-instagram"></i></a>
   
