--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
         <meta charset="utf-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
         <meta name="Kyle Jernigan" content="" />
-        <title>Kyle Jernigan - Portfolio Webpage</title>
+        <title>Kyle Jernigan - Home</title>
         <link rel="icon" href="Style/img/favicon.png">
         <!--Core CSS-->
         <link href="Style/style.css" rel="stylesheet"/>
@@ -83,11 +83,12 @@
                 <h1 class="bold text-center"><strong>About me</strong></h1>
                 <hr>
                 <img src="Style/img/doubleme.jpg" class="img-fluid" alt="Responsive image" style="border-radius: 4px;" >
-                <hr>
-                <p>I graduated with a Bachelor's degree in Information Technology with a focus in Web & Mobile Programming. My interests include programming, graphic design, photography, and electronic repair. I enjoy learning about new techniques or perspectives in my field of interests. When I am learning about a new topic, I try to learn as much as I can about it.</p>
-                <p>I have a passion for streamlining workflows & problem solving user interaction while presenting them in an elegant and beautiful lens. I love being the bridge that brings functionality and style together. Projects I have worked on have utilized tools and software such as Wordpress, Woo Commerce, Figma, Scribus, ScribeHow, and much more!</p>
-                <p>This website offers a glimpse into who I am and displays some of the skills I have!</p>
-                <p>Thanks for checking it out!</p>
+                <br>
+                <br>
+                <div class="text-center h6">My name is Kyle and I'm a creator living in Wilmington, NC.<br><br>Some of my favorite things are film photography <i>(I even have my own darkroom)</i>, music <i>(musician and collector since I was in high school)</i>, and writing short stories. My personal art style is rooted in DIY and very hands on art mediums and I love collaborating with other visionaries and bringing dreams into the real world. I enjoys learning about new techniques or perspectives in my field of interests.
+                <br><br>I graduated with a Bachelor's degree in Information Technology with a focus in Web & Mobile Programming and have a passion for streamlining workflows & problem solving user interaction while presenting them in an elegant and beautiful lens. I'm passionate about being the bridge that brings functionality and style together.<br>Projects I have worked on have utilized tools and software such as Wordpress, Woo Commerce, Figma, Scribus, ScribeHow, and much more!
+
+                </div>
               </div>
               <!--Grid column-->
             </div>
