--- a/resume.html
+++ b/resume.html
@@ -3,7 +3,7 @@
         <meta charset="utf-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
         <meta name="Kyle Jernigan" content="" />
-        <title>Kyle Jernigan - Portfolio Webpage</title>
+        <title>Kyle Jernigan - Resume Webpage</title>
         <link rel="icon" href="Style/img/favicon.png">
         <!--Core CSS-->
         <link href="Style/style.css" rel="stylesheet"/>
