--- a/portfolio.html
+++ b/portfolio.html
@@ -97,7 +97,7 @@
                        <div class="container">
                            <h5 class="text-muted">UI/UX Designer</h5>
                            <p class="text-center">
-                            Bangor Daily News was a client that's a newspaper publication distributing news to a large portion of central and eastern Maine. I was requested to design an updated workflow for their subcription purchase process. 
+                            Bangor Daily News was a client that's a newspaper publication distributing news to a large portion of central and eastern Maine. They requested designs for an updated workflow for their subcription purchase process. 
                             That's where I come in.<br><br>
                             My role as UI/UX Designer was collaborating with their design team to create a streamline and mordern flow utilizing guidelines that were requested. One of the key design focuses I made was showing that their customer's are contributors to the legacy of this century old
                             newspaper. That they are apart of the <b>team</b> that makes up the beautiful history of Bangor Daily News.
