--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
                 <img src="Style/img/doubleme.jpg" class="img-fluid" alt="Responsive image" style="border-radius: 4px;" >
                 <br>
                 <br>
-                <div class="text-center h6">My name is Kyle and I'm a creator living in Wilmington, NC.<br><br>Some of my favorite things are film photography <i>(I even have my own darkroom)</i>, music <i>(musician and collector since I was in high school)</i>, and writing short stories. My personal art style is rooted in DIY and very hands on art mediums and I love collaborating with other visionaries and bringing dreams into the real world. I enjoys learning about new techniques or perspectives in my field of interests.
+                <div class="text-center h6">My name is Kyle and I'm a creator living in Wilmington, NC.<br><br>Some of my favorite things are film photography <i>(I even have my own darkroom)</i>, music <i>(musician and collector since I was in high school)</i>, and writing short stories. My personal art style is rooted in DIY and very hands on art mediums and I love collaborating with other visionaries and bringing dreams into the real world. I enjoy learning about new techniques or perspectives in my field of interests.
                 <br><br>I graduated with a Bachelor's degree in Information Technology with a focus in Web & Mobile Programming and have a passion for streamlining workflows & problem solving user interaction while presenting them in an elegant and beautiful lens. I'm passionate about being the bridge that brings functionality and style together.<br>Projects I have worked on have utilized tools and software such as Wordpress, Woo Commerce, Figma, Scribus, ScribeHow, and much more!
 
                 </div>
