--- a/portfolio.html
+++ b/portfolio.html
@@ -112,6 +112,25 @@
                        </div>
                        <br>
                        <br>
+                   <div class="col-xl shadow p-3 mb-5 gx-1 mx-auto bg-white rounded">
+                       <div class="text-left text-large text-dark h3"><b>Criterion Channel</b></div>
+                        <!--work info go here-->
+                       <div class="container">
+                           <h5 class="text-muted">UI/UX Design</h5>
+                           <p class="text-center">
+                            Criteiron Channel is a streaming servive that specalizes in preservation and archiving of film. This app allows users to experience a wide range of films from all across the globe along with providing ample amounts of bonus features<br><br>
+                            This was just a "for fun" project I did for myself as I am an avid fan and love using the app. I just wanted to dream how I could improve the app's search functionality and make a more refined and fun user experience. Again, I have never worked with Criterion Channel and this was just an evening project I did to challenge myself with mobile design.
+                            <br>
+                            <br>
+                            <p><i>click through the interactive workflow I created below to see the differernt mockups I designed</i></p>
+                            <iframe style="border: 1px solid rgba(0, 0, 0, 0.1);" width="100%" height="100%" src=<iframe style="border: 1px solid rgba(0, 0, 0, 0.1);" width="800" height="450" src="https://embed.figma.com/proto/ck3b8RD6Rpzxf1pm5EqH73/Searching-For-a-Better-Criterion-Channel?page-id=0%3A1&node-id=1-2&p=f&viewport=214%2C157%2C0.21&scaling=min-zoom&content-scaling=fixed&starting-point-node-id=1%3A2&embed-host=share" allowfullscreen></iframe> allowfullscreen></iframe>
+
+                           </p>
+                         
+   
+                       </div>
+                       <br>
+                       <br>
                 </div>
 
 
