--- a/portfolio.html
+++ b/portfolio.html
@@ -107,8 +107,8 @@
                             <iframe style="border: 1px solid rgba(0, 0, 0, 0.1);" width="100%" height="100%" src="https://embed.figma.com/proto/aRgVLQY9qrhs8IY59m10Mt/Bangor-Demo?page-id=0%3A1&node-id=1-167&p=f&viewport=229%2C128%2C0.17&scaling=scale-down&content-scaling=fixed&starting-point-node-id=1%3A167&embed-host=share" allowfullscreen></iframe>
 
                            </p>
+                        </div>
                          
-   
                        </div>
                        <br>
                        <br>
@@ -123,7 +123,7 @@
                             <br>
                             <br>
                             <p><i>click through the interactive workflow I created below to see the differernt mockups I designed</i></p>
-                            <iframe style="border: 1px solid rgba(0, 0, 0, 0.1);" width="100%" height="100%" src=<iframe style="border: 1px solid rgba(0, 0, 0, 0.1);" width="800" height="450" src="https://embed.figma.com/proto/ck3b8RD6Rpzxf1pm5EqH73/Searching-For-a-Better-Criterion-Channel?page-id=0%3A1&node-id=1-2&p=f&viewport=214%2C157%2C0.21&scaling=min-zoom&content-scaling=fixed&starting-point-node-id=1%3A2&embed-host=share" allowfullscreen></iframe> allowfullscreen></iframe>
+                           <iframe style="border: 1px solid rgba(0, 0, 0, 0.1);" width="100%" height="100%" src="https://embed.figma.com/proto/ck3b8RD6Rpzxf1pm5EqH73/Searching-For-a-Better-Criterion-Channel?page-id=0%3A1&node-id=1-2&p=f&viewport=214%2C157%2C0.21&scaling=min-zoom&content-scaling=fixed&starting-point-node-id=1%3A2&embed-host=share" allowfullscreen></iframe>
 
                            </p>
                          
