--- a/portfolio.html
+++ b/portfolio.html
@@ -118,11 +118,11 @@
                        <div class="container">
                            <h5 class="text-muted">UI/UX Design</h5>
                            <p class="text-center">
-                            Criteiron Channel is a streaming servive that specalizes in preservation and archiving of film. This app allows users to experience a wide range of films from all across the globe along with providing ample amounts of bonus features<br><br>
+                            Criteiron Channel is a streaming service that specializes in preservation and archiving of film. This app allows users to experience a wide range of films from all across the globe along with providing ample amounts of bonus features.<br><br>
                             This was just a "for fun" project I did for myself as I am an avid fan and love using the app. I just wanted to dream how I could improve the app's search functionality and make a more refined and fun user experience. Again, I have never worked with Criterion Channel and this was just an evening project I did to challenge myself with mobile design.
                             <br>
                             <br>
-                            <p><i>click through the interactive workflow I created below to see the differernt mockups I designed</i></p>
+                            <p><i>click through the interactive workflow I created below to see my process for this design.</i></p>
                            <iframe style="border: 1px solid rgba(0, 0, 0, 0.1);" width="100%" height="100%" src="https://embed.figma.com/proto/ck3b8RD6Rpzxf1pm5EqH73/Searching-For-a-Better-Criterion-Channel?page-id=0%3A1&node-id=1-2&p=f&viewport=214%2C157%2C0.21&scaling=min-zoom&content-scaling=fixed&starting-point-node-id=1%3A2&embed-host=share" allowfullscreen></iframe>
 
                            </p>
