--- a/portfolio.html
+++ b/portfolio.html
@@ -79,7 +79,12 @@
                         <h5 class="text-muted">Lead UI/UX Designer | <a href="https://www.summaware.com" target="_blank">Summaware.com</a></h5>
                         <p class="text-center">Bringing one of the oldest industries into the digital age. Summaware is a multi-platform management software covering all aspects it takes to produce and distribute news publications.<br><br>
                           As the Lead UI/UX designer, my vision for the project has been to create a streamline & easy to use interface that makes employees excited to return to the system everyday. Utilize vibrant/warm colors to make the mundane tasks welcoming and easy on the eyes.
-                          I've also been spearheading the process of technical writing/documentation by creating how-to guides for the employees who use Summaware daily to assist in their regular workflows and streamline their tasks. 
+                          I've also been spearheading the process of technical writing/documentation by creating how-to guides for the employees who use Summaware daily to assist in their regular workflows and streamline their tasks.
+                        <br>
+                        <br>
+                        <p><i>Below is a case study for one of the numerous business critical flows I've designed for Summaware</i></p>
+                        <iframe style="border: 1px solid rgba(0, 0, 0, 0.1);" width="100%" height="100%" src="https://embed.figma.com/proto/lYg79xTsxHhQd7GK4fHr6Q/Summaware-Case-Study?page-id=0%3A1&node-id=1-2&viewport=351%2C130%2C0.02&scaling=min-zoom&content-scaling=fixed&embed-host=share" allowfullscreen></iframe>
+                            
                         </p>
                       
 
