--- a/portfolio.html
+++ b/portfolio.html
@@ -83,7 +83,7 @@
                         <br>
                         <br>
                         <p><i>Below is a case study for one of the numerous business critical flows I've designed for Summaware</i></p>
-                        <iframe style="border: 1px solid rgba(0, 0, 0, 0.1);" width="100%" height="100%" src="https://embed.figma.com/proto/lYg79xTsxHhQd7GK4fHr6Q/Summaware-Case-Study?page-id=0%3A1&node-id=1-2&viewport=390%2C238%2C0.26&scaling=scale-down&content-scaling=fixed&starting-point-node-id=1%3A2&embed-host=share" allowfullscreen></iframe>
+                        <iframe style="border: 1px solid rgba(0, 0, 0, 0.1);" width="100%" height="100%" src="https://embed.figma.com/proto/lYg79xTsxHhQd7GK4fHr6Q/Summaware-Case-Study?page-id=0%3A1&node-id=1-2&viewport=390%2C238%2C0.26&scaling=scale-down-width&content-scaling=fixed&starting-point-node-id=1%3A2&embed-host=share" allowfullscreen></iframe>
                             
                         </p>
                       
